--- a/style.css
+++ b/style.css
@@ -71,7 +71,7 @@ h3{
     
     
 }
-#q1,#q2,#q3,#q4,#q5,#q6{
+#q1,#q2,#q3,#q4,#q5,#q6,#q7{
     margin-top: 50px;
     margin-bottom: 20px;
     margin-left: 50px;
